# Judge

./: CMakeLists.txt  LICENSE  README.md  main.c
cli/: Cli.c  Cli.h  cliHelpDescription.c
core/: CompileHelper.c  CompileHelper.h  Core.c  Core.h  FileHelper.c  FileHelper.h  Macros.h
examples/: CompileHelperExample.c  CompileHelperExample.h  JudgeExample.c  JudgeExample.h  TestCaseGenExample.c  TestCaseGenExample.h  cliExamples.c  cliExamples.h  codeConvention.c  codeConventions.h  fileHelperExample.c  fileHelperExample.h  strConcatExample.c  strConcatExample.h  useToJson.c
judge/: Judge.c  Judge.h
testCaseGenerator/: TestCaseGenerator.c  TestCaseGenerator.h
